--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -8,105 +8,123 @@
     android:backgroundTint="#2D2D2D"
     tools:context=".MainMenu">
 
-    <Button
-        android:id="@+id/btn_entregas"
-        android:layout_width="175dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="28dp"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:background="@drawable/rounded_corners25"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.117"
-        app:layout_constraintStart_toEndOf="@+id/btn_usuario"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/textView7"
+        <ImageButton
+            android:id="@+id/btn_inventario"
+            android:layout_width="175dp"
+            android:layout_height="160dp"
+            android:background="@drawable/rounded_corners25"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/boxicon" />
+
+        <ImageButton
+            android:id="@+id/btn_rutas"
+            android:layout_width="175dp"
+            android:layout_height="160dp"
+            android:layout_marginStart="20dp"
+            android:background="@drawable/rounded_corners25"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/boxicon" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/shc_bodl"
+            android:paddingStart="70dp"
+            android:text="@string/Inventario"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/shc_bodl"
+            android:paddingStart="130dp"
+            android:text="@string/Rutas"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="60dp"
-        android:fontFamily="@font/shc_bodl"
-        android:text="@string/Entregas"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:layout_marginTop="32dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_entregas" />
-
-    <Button
-        android:id="@+id/btn_usuario"
-        android:layout_width="175dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="52dp"
-        android:background="@drawable/rounded_corners25"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"/>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
+        <ImageButton
+            android:id="@+id/btn_usuario"
+            android:layout_width="175dp"
+            android:layout_height="160dp"
+            android:background="@drawable/rounded_corners25"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/boxicon" />
+
+        <ImageButton
+            android:id="@+id/btn_entregas"
+            android:layout_width="175dp"
+            android:layout_height="160dp"
+            android:layout_marginStart="20sp"
+            android:background="@drawable/rounded_corners25"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/boxicon" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/shc_bodl"
-        android:text="@string/Usuario"
-        android:textAlignment="textStart"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/textView7"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_usuario" />
-
-    <Button
-        android:id="@+id/btn_rutas"
-        android:layout_width="175dp"
-        android:layout_height="160dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/rounded_corners25"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/btn_inventario"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="80dp"
-        android:fontFamily="@font/shc_bodl"
-        android:text="@string/Rutas"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_rutas" />
-
-    <Button
-        android:id="@+id/btn_inventario"
-        android:layout_width="175dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
-        android:background="@drawable/rounded_corners25"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/shc_bodl"
-        android:text="@string/Inventario"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_inventario" />
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/shc_bodl"
+            android:paddingStart="72dp"
+            android:text="@string/Usuario"
+            android:textAlignment="textStart"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="60dp"
+            android:fontFamily="@font/shc_bodl"
+            android:paddingStart="135dp"
+            android:text="@string/Entregas"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
