Creacion de toolbar superior en todos los activities, modificacion de padding y de colores.

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,130 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#2D2D2D"
-    android:backgroundTint="#2D2D2D"
-    tools:context=".MainMenu">
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageButton
-            android:id="@+id/btn_inventario"
-            android:layout_width="175dp"
-            android:layout_height="160dp"
-            android:background="@drawable/rounded_corners25"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/boxicon" />
-
-        <ImageButton
-            android:id="@+id/btn_rutas"
-            android:layout_width="175dp"
-            android:layout_height="160dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/rounded_corners25"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/boxicon" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/shc_bodl"
-            android:paddingStart="70dp"
-            android:text="@string/Inventario"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/shc_bodl"
-            android:paddingStart="130dp"
-            android:text="@string/Rutas"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
-
-        <ImageButton
-            android:id="@+id/btn_usuario"
-            android:layout_width="175dp"
-            android:layout_height="160dp"
-            android:background="@drawable/rounded_corners25"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/boxicon" />
-
-        <ImageButton
-            android:id="@+id/btn_entregas"
-            android:layout_width="175dp"
-            android:layout_height="160dp"
-            android:layout_marginStart="20sp"
-            android:background="@drawable/rounded_corners25"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/boxicon" />
-    </LinearLayout>
-
-    <LinearLayout
+    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+        android:layout_height="match_parent"
+        android:background="#2D2D2D"
+        android:backgroundTint="#2D2D2D"
+        tools:context=".MainMenu">
 
-        <TextView
-            android:id="@+id/textView4"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/gris_bamx">
+
+        <LinearLayout
+            android:id="@+id/LinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:background="@color/rojo_bamx"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/tv_bienvenida"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingStart="30px"
+                android:text="Bienvenido Juan"
+                android:textColor="#FFFFFF"
+                android:textSize="34sp" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/shc_bodl"
-            android:paddingStart="72dp"
-            android:text="@string/Usuario"
-            android:textAlignment="textStart"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp" />
+            android:layout_marginTop="52dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/LinearLayout">
 
-        <TextView
-            android:id="@+id/textView7"
+            <ImageButton
+                android:id="@+id/btn_inventario"
+                android:layout_width="175dp"
+                android:layout_height="160dp"
+                android:background="@drawable/rounded_corners25"
+                android:backgroundTint="@color/light_grey"
+                android:padding="35px"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/boxicon" />
+
+            <ImageButton
+                android:id="@+id/btn_rutas"
+                android:layout_width="175dp"
+                android:layout_height="160dp"
+                android:layout_marginStart="20dp"
+                android:background="@drawable/rounded_corners25"
+                android:backgroundTint="@color/light_grey"
+                android:padding="35px"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/boxicon" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/shc_bodl"
+                android:paddingStart="70dp"
+                android:text="@string/Inventario"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/shc_bodl"
+                android:paddingStart="130dp"
+                android:text="@string/Rutas"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="60dp"
-            android:fontFamily="@font/shc_bodl"
-            android:paddingStart="135dp"
-            android:text="@string/Entregas"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:layout_marginTop="32dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageButton
+                android:id="@+id/btn_usuario"
+                android:layout_width="175dp"
+                android:layout_height="160dp"
+                android:background="@drawable/rounded_corners25"
+                android:backgroundTint="@color/light_grey"
+                android:padding="35px"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/boxicon" />
+
+            <ImageButton
+                android:id="@+id/btn_entregas"
+                android:layout_width="175dp"
+                android:layout_height="160dp"
+                android:layout_marginStart="20sp"
+                android:background="@drawable/rounded_corners25"
+                android:backgroundTint="@color/light_grey"
+                android:padding="35px"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/boxicon" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/shc_bodl"
+                android:paddingStart="72dp"
+                android:text="@string/Usuario"
+                android:textAlignment="textStart"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="60dp"
+                android:fontFamily="@font/shc_bodl"
+                android:paddingStart="135dp"
+                android:text="@string/Entregas"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
+
