--- a/app/src/main/res/layout/activity_entregas.xml
+++ b/app/src/main/res/layout/activity_entregas.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,17 +8,48 @@
     android:backgroundTint="#2D2D2D"
     tools:context=".Entregas">
 
-    <ImageView
-        android:id="@+id/img_troca"
-        android:layout_width="272dp"
-        android:layout_height="123dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/silverado"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/LinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:background="@color/rojo_bamx"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageButton
+                android:id="@+id/btn_back_inventario"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#00FFFFFF"
+                android:src="@drawable/ic_back"></ImageButton>
+
+
+            <ImageView
+                android:id="@+id/imgMenu"
+                android:layout_width="82dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="116dp"
+                android:src="@drawable/silverado" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/img_troca"
+            android:layout_width="272dp"
+            android:layout_height="123dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/silverado"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/LinearLayout" />
 
     <TextView
         android:id="@+id/tv_static_modelo"
@@ -90,34 +121,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_static_color" />
 
-    <Button
-        android:id="@+id/btn_entregas_entregas"
-        android:layout_width="175dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="36dp"
-        android:background="@drawable/rounded_corners"
-        android:backgroundTint="#3ABB91"
-        android:fontFamily="@font/shc_bodl"
-        android:text="@string/Entregas"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/btn_entregas_inventario"
-        app:layout_constraintHorizontal_bias="0.347"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_static_poliza" />
+        <Button
+            android:id="@+id/btn_entregas_entregas"
+            android:layout_width="175dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="36dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="@color/amarillo_bamx"
+            android:fontFamily="@font/shc_bodl"
+            android:text="@string/Entregas"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toStartOf="@+id/btn_entregas_inventario"
+            app:layout_constraintHorizontal_bias="0.347"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_static_poliza" />
 
-    <Button
-        android:id="@+id/btn_entregas_inventario"
-        android:layout_width="175dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/rounded_corners"
-        android:backgroundTint="#3ABB91"
-        android:fontFamily="@font/shc_bodl"
-        android:text="@string/Inventario"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_static_poliza" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/btn_entregas_inventario"
+            android:layout_width="175dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/rounded_corners"
+            android:backgroundTint="@color/amarillo_bamx"
+            android:fontFamily="@font/shc_bodl"
+            android:text="@string/Inventario"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_static_poliza" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.drawerlayout.widget.DrawerLayout>
