--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2D2D2D"
-    android:backgroundTint="#2D2D2D"
     tools:context=".MainActivity">
 
     <ImageView
@@ -29,6 +28,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/rounded_corners"
+        android:backgroundTint="@color/gris_bamx"
         android:drawableLeft="@drawable/ic_lock"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -37,7 +37,6 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +51,7 @@
         android:layout_marginEnd="16dp"
         android:autoText="false"
         android:background="@drawable/rounded_corners"
+        android:backgroundTint="@color/gris_bamx"
         android:drawableLeft="@drawable/ic_person"
         android:drawablePadding="10dp"
         android:elegantTextHeight="false"
@@ -63,7 +63,6 @@
         android:paddingStart="10dp"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
@@ -78,7 +77,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/rounded_corners"
-        android:backgroundTint="#BF2B2B"
+        android:backgroundTint="@color/rojo_bamx"
         android:fontFamily="sans-serif-medium"
         android:text="@string/iniciar_sesion"
         android:textSize="16sp"
