--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:drawableLeft="@drawable/ic_lock"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/omnes_medium"
         android:hint="@string/contraseña"
         android:inputType="textPassword"
         android:paddingStart="10dp"
@@ -56,7 +56,7 @@
         android:drawablePadding="10dp"
         android:elegantTextHeight="false"
         android:ems="10"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/omnes_medium"
         android:freezesText="false"
         android:hint="@string/usuario"
         android:inputType="textPersonName"
@@ -78,7 +78,7 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/rounded_corners"
         android:backgroundTint="@color/rojo_bamx"
-        android:fontFamily="sans-serif-medium"
+        android:fontFamily="@font/omnes_semibold"
         android:text="@string/iniciar_sesion"
         android:textSize="16sp"
         app:cornerRadius="50px"
