--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,13 +52,13 @@
         android:autoText="false"
         android:background="@drawable/rounded_corners"
         android:backgroundTint="@color/gris_bamx"
-        android:drawableLeft="@drawable/ic_person"
+        android:drawableLeft="@drawable/ic_email"
         android:drawablePadding="10dp"
         android:elegantTextHeight="false"
         android:ems="10"
         android:fontFamily="@font/omnes_medium"
         android:freezesText="false"
-        android:hint="@string/usuario"
+        android:hint="@string/Email"
         android:inputType="textPersonName"
         android:paddingStart="10dp"
         android:textAllCaps="false"
