--- a/app/src/main/res/layout/activity_inventario.xml
+++ b/app/src/main/res/layout/activity_inventario.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
-                android:id="@+id/btn_back_inventario"
+                android:id="@+id/btn_back_inventarioLay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#00FFFFFF"
@@ -33,7 +33,7 @@
 
 
             <ImageView
-                android:id="@+id/imgMenu"
+                android:id="@+id/img_InvLay"
                 android:layout_width="82dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="116dp"
@@ -43,6 +43,14 @@
 
 
         </LinearLayout>
+
+        <ListView
+            android:id="@+id/list_Socios"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/LinearLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
