--- a/app/src/main/res/layout/activity_inventario.xml
+++ b/app/src/main/res/layout/activity_inventario.xml
@@ -10,8 +10,14 @@
     <!-- ToolBar/AppBarr -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/gris_bamx">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical" />
+
 
         <LinearLayout
             android:id="@+id/LinearLayout"
@@ -29,7 +35,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#00FFFFFF"
-                android:src="@drawable/ic_back"></ImageButton>
+                android:src="@drawable/ic_back">
+
+            </ImageButton>
 
 
             <ImageView
@@ -37,9 +45,7 @@
                 android:layout_width="82dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="116dp"
-                android:src="@drawable/boxicon"
-
-                />
+                android:src="@drawable/boxicon" />
 
 
         </LinearLayout>
@@ -50,9 +56,14 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/LinearLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/LinearLayout"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:divider="@null"
+            android:paddingBottom="65dp"
+            android:paddingTop="10dp"
+           />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
