--- a/app/src/main/res/layout/socio_layout.xml
+++ b/app/src/main/res/layout/socio_layout.xml
@@ -4,48 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/img_SocioLay"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            tools:srcCompat="@tools:sample/avatars" />
-    </LinearLayout>
+    android:orientation="horizontal"
+    android:padding="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@drawable/rounded_listview"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/txt_NombreSocio"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="#FFFFFF"
-            android:textSize="34sp" />
+            android:layout_marginEnd="10dp"
+            android:orientation="vertical"
+            android:padding="5dp">
 
-        <TextView
-            android:id="@+id/txt_DeterSocio"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="#FFFFFF"
-            android:textSize="24sp" />
+            <ImageView
+                android:id="@+id/img_SocioLay"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                tools:srcCompat="@tools:sample/avatars" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/txt_DirSocio"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txt_NombreSocio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/omnes_bold"
+                android:text="TextView"
+                android:textColor="#FFFFFF"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/txt_DeterSocio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/omnes_semibold"
+                android:text="TextView"
+                android:textColor="#FFFFFF"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/txt_DirSocio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/omnes_medium"
+                android:text="TextView"
+                android:textColor="#FFFFFF"
+                android:textSize="19sp" />
+        </LinearLayout>
+
     </LinearLayout>
+
 </LinearLayout>
